--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,5 +17,8 @@ Suggests:
     covr,
     testthat (>= 3.0.0)
 Imports: 
-    lifecycle
+    magrittr,
+    lifecycle,
+    methods,
+    vctrs
 Config/testthat/edition: 3
