first 100% unit test and successful error free build?

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: rx
-Title: Prescribing New Formulas
+Title: Prescribing Formulas
 Version: 0.0.0.9000
 Authors@R: 
     person(given = "Anish",
@@ -7,18 +7,26 @@ Authors@R:
            role = c("aut", "cre"),
            email = "ashah282@uic.edu",
            comment = c(ORCID = "0000-0002-9729-1558"))
-Description: What the package does (one paragraph).
+Description: This package provides a simple interface for expanding upon the
+    `formula` class by adding the capacity for labeling terms. This allows for 
+    a flexible interface with other packages that are driven by formulas, 
+    particularly in the causal modeling space.
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
-Suggests: 
-    covr,
-    testthat (>= 3.0.0)
 Imports: 
     magrittr,
     lifecycle,
     methods,
-    vctrs
+    tidyr,
+Suggests: 
+    covr,
+    testthat (>= 3.0.0),
+    murmur,
+Remotes:
+    asshah4/rx
+URL: https://github.com/asshah4/rx
+BugReports: https://github.com/asshah4/rx/issues
 Config/testthat/edition: 3
