--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,5 +12,6 @@ export(list_to_table)
 export(reset_rx_labels)
 export(rx)
 export(set_rx_labels)
+export(set_rx_theme)
 export(table_to_list)
 importFrom(magrittr,"%>%")
