fixed description to help with remotes

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -25,7 +25,8 @@ Suggests:
     covr,
     testthat (>= 3.0.0),
 Remotes:
-    asshah4/rx
+    asshah4/rx,
+    asshah4/murmur,
 URL: https://github.com/asshah4/rx
 BugReports: https://github.com/asshah4/rx/issues
 Config/testthat/edition: 3
