added operation to subtract formula components

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ S3method(labels,rx)
 S3method(merge,rx)
 S3method(rx,default)
 S3method(rx,formula)
+S3method(split,rx)
 export("%>%")
 export(deparse_formula)
 export(is.named)
