pre-release... likely need this before murmur can go live

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,13 +5,13 @@ S3method(labels,rx)
 S3method(merge,rx)
 S3method(rx,default)
 S3method(rx,formula)
-S3method(split,rx)
 export("%>%")
 export(deparse_formula)
 export(is.named)
 export(list_to_table)
 export(reset_rx_labels)
 export(rx)
+export(separate)
 export(set_rx_labels)
 export(set_rx_theme)
 export(table_to_list)
