updated math functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,17 +2,16 @@
 
 S3method(Ops,rx)
 S3method(labels,rx)
-S3method(merge,rx)
 S3method(rx,default)
 S3method(rx,formula)
-S3method(split,rx)
 export("%>%")
+export(add)
 export(deparse_formula)
-export(divide)
 export(is.named)
 export(list_to_table)
 export(reset_rx_labels)
 export(set_rx_labels)
 export(set_rx_theme)
+export(subtract)
 export(table_to_list)
 importFrom(magrittr,"%>%")
