--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,8 @@
 
 S3method(Ops,rx)
 S3method(labels,rx)
+S3method(print,rx)
+S3method(roles,rx)
 S3method(rx,default)
 S3method(rx,formula)
 export("%>%")
@@ -9,8 +11,10 @@ export(add)
 export(deparse_formula)
 export(is.named)
 export(list_to_table)
-export(reset_rx_labels)
-export(set_rx_labels)
+export(reset_rx_roles)
+export(roles)
+export(rx)
+export(set_rx_roles)
 export(set_rx_theme)
 export(subtract)
 export(table_to_list)
