--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
-Package: rx
-Title: Prescribing Formulas
+Package: forks
+Title: Prescription Formulas
 Version: 0.0.0.9000
 Authors@R: 
-    person(given = "Anish",
+    person(given = "Anish S.",
            family = "Shah",
            role = c("aut", "cre"),
            email = "ashah282@uic.edu",
@@ -17,7 +17,6 @@ LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
 Imports: 
-    magrittr,
     lifecycle,
     methods,
     tidyr,
@@ -25,8 +24,10 @@ Suggests:
     covr,
     testthat (>= 3.0.0),
     crayon,
-Remotes:
-    asshah4/murmur,
-URL: https://github.com/asshah4/rx
-BugReports: https://github.com/asshah4/rx/issues
+    recipes,
+    knitr,
+    rmarkdown
+URL: https://github.com/asshah4/forks
+BugReports: https://github.com/asshah4/forks/issues
 Config/testthat/edition: 3
+VignetteBuilder: knitr
