--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -1,10 +1,10 @@
-url: https://asshah4.github.io/rx/
+url: https://asshah4.github.io/forks/
 
 destination: docs
 
 home:
   title: Prescribing Formulas
-  description: Expanding upon the formula class
+  description: Expanding upon the `formula` class
 
 navbar:
   structure:
@@ -25,4 +25,4 @@ navbar:
       href: reference/index.html
     github:
       icon: fab fa-github fa-lg
-      href: https://github.com/asshah4/rx/
+      href: https://github.com/asshah4/forks/
