working on operations

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,9 +4,16 @@ S3method(format,formula_vctr)
 S3method(format,term_rcrd)
 S3method(formula_vctr,default)
 S3method(formula_vctr,term_rcrd)
+S3method(getComponent,term_rcrd)
+S3method(lhs,formula)
+S3method(lhs,term_rcrd)
+S3method(list_of_formulas,default)
 S3method(list_of_formulas,formula_rcrd)
 S3method(obj_print_data,formula_vctr)
 S3method(obj_print_data,term_rcrd)
+S3method(rhs,formula)
+S3method(rhs,term_rcrd)
+S3method(setGroups,term_rcrd)
 S3method(term_rcrd,character)
 S3method(term_rcrd,default)
 S3method(term_rcrd,formula)
@@ -33,14 +40,16 @@ S3method(vec_ptype_abbr,formula_vctr)
 S3method(vec_ptype_abbr,list_of_formulas)
 S3method(vec_ptype_abbr,term_rcrd)
 S3method(vec_ptype_full,list_of_formulas)
-export(get_roles)
-export(get_terms)
+export(getComponent)
 export(is_formula_frame)
 export(is_rx)
 export(is_term)
 export(is_tx)
+export(lhs)
 export(list_of_formulas)
 export(list_to_table)
+export(rhs)
+export(setGroups)
 export(table_to_list)
 export(term_rcrd)
 import(vctrs)
