--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,7 +8,7 @@ S3method(getComponent,term_rcrd)
 S3method(lhs,formula)
 S3method(lhs,term_rcrd)
 S3method(list_of_formulas,default)
-S3method(list_of_formulas,formula_rcrd)
+S3method(list_of_formulas,formula_vctr)
 S3method(obj_print_data,formula_vctr)
 S3method(obj_print_data,term_rcrd)
 S3method(rhs,formula)
