fitting list of formulas now works as expected for basic stat functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,7 +3,9 @@
 S3method(format,formula_rx)
 S3method(format,term_rx)
 S3method(formula_rx,default)
+S3method(formula_rx,formula)
 S3method(formula_rx,term_rx)
+S3method(getComponent,formula_rx)
 S3method(getComponent,term_rx)
 S3method(lhs,formula)
 S3method(lhs,term_rx)
@@ -40,6 +42,8 @@ S3method(vec_ptype_abbr,formula_rx)
 S3method(vec_ptype_abbr,list_of_formulas)
 S3method(vec_ptype_abbr,term_rx)
 S3method(vec_ptype_full,list_of_formulas)
+export(as_term_rx)
+export(fit.list_of_formulas)
 export(formula_rx)
 export(frx)
 export(getComponent)
@@ -52,5 +56,6 @@ export(rhs)
 export(setGroups)
 export(table_to_list)
 export(term_rx)
+export(terms_rx.formula_rx)
 export(trx)
 import(vctrs)
