improve test coverage and table explosions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,10 +7,10 @@ S3method(format,term_rx)
 S3method(formula_rx,default)
 S3method(formula_rx,formula)
 S3method(formula_rx,term_rx)
-S3method(getComponent,formula_rx)
-S3method(getComponent,term_rx)
+S3method(groups,list_of_formulas)
+S3method(labels,formula_rx)
 S3method(labels,list_of_formulas)
-S3method(labels,list_of_models)
+S3method(labels,term_rx)
 S3method(lhs,formula)
 S3method(lhs,formula_rx)
 S3method(lhs,term_rx)
@@ -23,7 +23,6 @@ S3method(rhs,formula)
 S3method(rhs,formula_rx)
 S3method(rhs,term_rx)
 S3method(roles,list_of_formulas)
-S3method(roles,list_of_models)
 S3method(setGroups,term_rx)
 S3method(term_rx,character)
 S3method(term_rx,default)
@@ -67,7 +66,7 @@ export(fmls)
 export(forks_style)
 export(formula_rx)
 export(frx)
-export(getComponent)
+export(groups)
 export(has_cli)
 export(is_formula_rx)
 export(is_term_rx)
