need to incorporate labels appropraitely in formulas

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,7 +2,6 @@
 
 S3method(format,formula_rx)
 S3method(format,list_of_formulas)
-S3method(format,list_of_models)
 S3method(format,term_rx)
 S3method(formula_rx,default)
 S3method(formula_rx,formula)
@@ -55,13 +54,11 @@ S3method(vec_ptype2,term_rx.term_rx)
 S3method(vec_ptype2,vctrs_list_of.character)
 S3method(vec_ptype_abbr,formula_rx)
 S3method(vec_ptype_abbr,list_of_formulas)
-S3method(vec_ptype_abbr,list_of_models)
 S3method(vec_ptype_abbr,term_rx)
 S3method(vec_ptype_full,list_of_formulas)
-S3method(vec_ptype_full,list_of_models)
 export(add)
 export(explode)
-export(fit.list_of_formulas)
+export(fit_fmls)
 export(fmls)
 export(forks_style)
 export(formula_rx)
