working on improving labels at formula_rx level

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ S3method(rhs,formula_rx)
 S3method(rhs,term_rx)
 S3method(roles,list_of_formulas)
 S3method(setGroups,term_rx)
+S3method(setLabels,term_rx)
 S3method(term_rx,character)
 S3method(term_rx,default)
 S3method(term_rx,formula)
@@ -73,6 +74,7 @@ export(list_to_table)
 export(rhs)
 export(roles)
 export(setGroups)
+export(setLabels)
 export(table_to_list)
 export(term_rx)
 export(trx)
