improved table attributes for labels

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,11 +20,12 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
 Depends:
     R (>= 4.0.0),
-    vctrs (>= 0.3.8.0),
+    vctrs (>= 0.3.8.0)
 Imports: 
     lifecycle,
     methods,
     generics,
+    pillar
 Suggests: 
     covr,
     testthat (>= 3.0.0),
