--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ S3method(formula_rx,default)
 S3method(formula_rx,formula)
 S3method(formula_rx,term_rx)
 S3method(groups,list_of_formulas)
+S3method(labels,fmls)
 S3method(labels,formula_rx)
 S3method(labels,list_of_formulas)
 S3method(labels,term_rx)
