updated terms to be more inclusive of all variable types

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,6 +36,7 @@ S3method(roles,list_of_models)
 S3method(setGroups,term_rx)
 S3method(setLabels,term_rx)
 S3method(term_rx,character)
+S3method(term_rx,data.frame)
 S3method(term_rx,default)
 S3method(term_rx,formula)
 S3method(term_rx,formula_rx)
@@ -74,7 +75,6 @@ export(add)
 export(cast)
 export(fit)
 export(fmls)
-export(forks_style)
 export(formula_rx)
 export(frx)
 export(groups)
