--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,9 +2,11 @@
 
 S3method(cast,list_of_formulas)
 S3method(cast,list_of_models)
+S3method(format,formula_list)
 S3method(format,formula_rx)
-S3method(format,list_of_formulas)
 S3method(format,term_rx)
+S3method(formula_list,default)
+S3method(formula_list,formula_rx)
 S3method(formula_rx,default)
 S3method(formula_rx,formula)
 S3method(formula_rx,term_rx)
@@ -17,10 +19,8 @@ S3method(labels,term_rx)
 S3method(lhs,formula)
 S3method(lhs,formula_rx)
 S3method(lhs,term_rx)
-S3method(list_of_formulas,default)
-S3method(list_of_formulas,formula_rx)
+S3method(obj_print_data,formula_list)
 S3method(obj_print_data,formula_rx)
-S3method(obj_print_data,list_of_formulas)
 S3method(obj_print_data,term_rx)
 S3method(rhs,formula)
 S3method(rhs,formula_rx)
@@ -34,6 +34,7 @@ S3method(term_rx,data.frame)
 S3method(term_rx,default)
 S3method(term_rx,formula)
 S3method(term_rx,formula_rx)
+S3method(term_rx,lm)
 S3method(update,formula_rx)
 S3method(vec_arith,term_rx.default)
 S3method(vec_arith,term_rx.term_rx)
@@ -59,21 +60,21 @@ S3method(vec_ptype2,term_rx.formula_rx)
 S3method(vec_ptype2,term_rx.rcrds_list_of)
 S3method(vec_ptype2,term_rx.term_rx)
 S3method(vec_ptype2,vctrs_list_of.character)
+S3method(vec_ptype_abbr,formula_list)
 S3method(vec_ptype_abbr,formula_rx)
-S3method(vec_ptype_abbr,list_of_formulas)
 S3method(vec_ptype_abbr,term_rx)
-S3method(vec_ptype_full,list_of_formulas)
+S3method(vec_ptype_full,formula_list)
 export(add)
 export(cast)
 export(fmls)
+export(formula_list)
 export(formula_rx)
-export(frx)
+export(fx)
 export(groups)
 export(has_cli)
 export(is_formula_rx)
 export(is_term_rx)
 export(lhs)
-export(list_of_formulas)
 export(list_to_table)
 export(rhs)
 export(roles)
@@ -81,6 +82,6 @@ export(setGroups)
 export(setLabels)
 export(table_to_list)
 export(term_rx)
-export(trx)
+export(tx)
 export(vec_arith.term_rx)
 import(vctrs)
