added model term extraction

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,7 +34,9 @@ S3method(term_rx,data.frame)
 S3method(term_rx,default)
 S3method(term_rx,formula)
 S3method(term_rx,formula_rx)
+S3method(term_rx,glm)
 S3method(term_rx,lm)
+S3method(term_rx,model_fit)
 S3method(update,formula_rx)
 S3method(vec_arith,term_rx.default)
 S3method(vec_arith,term_rx.term_rx)
