formulas work now

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,8 +27,6 @@ S3method(rhs,formula_rx)
 S3method(rhs,term_rx)
 S3method(roles,list_of_formulas)
 S3method(roles,list_of_models)
-S3method(setGroups,term_rx)
-S3method(setLabels,term_rx)
 S3method(term_rx,character)
 S3method(term_rx,data.frame)
 S3method(term_rx,default)
@@ -82,6 +80,7 @@ export(rhs)
 export(roles)
 export(setGroups)
 export(setLabels)
+export(setRoles)
 export(table_to_list)
 export(term_rx)
 export(tx)
