--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,7 +6,7 @@ S3method(cast,list_of_formulas)
 S3method(cast,list_of_models)
 S3method(format,formula_list)
 S3method(format,formula_rx)
-S3method(format,term_rx)
+S3method(format,term_rex)
 S3method(formula_list,default)
 S3method(formula_list,formula_rx)
 S3method(formula_rx,default)
@@ -23,51 +23,51 @@ S3method(lhs,formula_rx)
 S3method(lhs,term_rx)
 S3method(obj_print_data,formula_list)
 S3method(obj_print_data,formula_rx)
-S3method(obj_print_data,term_rx)
+S3method(obj_print_data,term_rex)
 S3method(rhs,formula)
 S3method(rhs,formula_rx)
 S3method(rhs,term_rx)
 S3method(roles,list_of_formulas)
 S3method(roles,list_of_models)
-S3method(term_rx,character)
-S3method(term_rx,data.frame)
-S3method(term_rx,default)
-S3method(term_rx,formula)
-S3method(term_rx,formula_rx)
-S3method(term_rx,glm)
-S3method(term_rx,lm)
-S3method(term_rx,model_fit)
 S3method(update,formula_rx)
 S3method(update,term_rx)
-S3method(vec_arith,term_rx.default)
-S3method(vec_arith,term_rx.term_rx)
+S3method(vec_arith,term_rex.default)
+S3method(vec_arith,term_rex.term_rex)
 S3method(vec_cast,character.formula_rx)
-S3method(vec_cast,character.term_rx)
+S3method(vec_cast,character.term_rex)
 S3method(vec_cast,character.vctrs_list_of)
 S3method(vec_cast,formula_rx.formula_rx)
-S3method(vec_cast,rcrds_list_of.term_rx)
-S3method(vec_cast,term_rx.character)
+S3method(vec_cast,rcrds_list_of.term_rex)
+S3method(vec_cast,term_rex.character)
+S3method(vec_cast,term_rex.rcrds_list_of)
+S3method(vec_cast,term_rex.term_rex)
 S3method(vec_cast,term_rx.formula_rx)
-S3method(vec_cast,term_rx.rcrds_list_of)
-S3method(vec_cast,term_rx.term_rx)
 S3method(vec_cast,vctrs_list_of.character)
 S3method(vec_ptype2,character.formula_rx)
-S3method(vec_ptype2,character.term_rx)
+S3method(vec_ptype2,character.term_rex)
 S3method(vec_ptype2,character.vctrs_list_of)
 S3method(vec_ptype2,formula_rx.character)
 S3method(vec_ptype2,formula_rx.formula_rx)
 S3method(vec_ptype2,formula_rx.term_rx)
-S3method(vec_ptype2,rcrds_list_of.term_rx)
-S3method(vec_ptype2,term_rx.character)
+S3method(vec_ptype2,rcrds_list_of.term_rex)
+S3method(vec_ptype2,term_rex.character)
+S3method(vec_ptype2,term_rex.rcrds_list_of)
+S3method(vec_ptype2,term_rex.term_rex)
 S3method(vec_ptype2,term_rx.formula_rx)
-S3method(vec_ptype2,term_rx.rcrds_list_of)
-S3method(vec_ptype2,term_rx.term_rx)
 S3method(vec_ptype2,vctrs_list_of.character)
 S3method(vec_ptype_abbr,formula_list)
 S3method(vec_ptype_abbr,formula_rx)
-S3method(vec_ptype_abbr,term_rx)
+S3method(vec_ptype_abbr,term_rex)
 S3method(vec_ptype_full,formula_list)
+S3method(vec_ptype_full,term_rex)
 export(add)
+export(axe.data.frame)
+export(axe.default)
+export(axe.formula)
+export(axe.formula_rx)
+export(axe.glm)
+export(axe.lm)
+export(axe.model_fit)
 export(cast)
 export(fmls)
 export(formula_list)
@@ -85,7 +85,7 @@ export(setGroups)
 export(setLabels)
 export(setRoles)
 export(table_to_list)
-export(term_rx)
+export(term_rex)
 export(tx)
-export(vec_arith.term_rx)
+export(vec_arith.term_rex)
 import(vctrs)
