renamed to medical reference

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ S3method(format,formula_list)
 S3method(format,rx)
 S3method(format,term)
 S3method(formula_list,default)
+S3method(formula_list,list)
 S3method(formula_list,rx)
 S3method(groups,formula_list)
 S3method(labels,formula_list)
@@ -29,6 +30,7 @@ S3method(term,character)
 S3method(term,data.frame)
 S3method(term,default)
 S3method(term,formula)
+S3method(term,formula_list)
 S3method(term,glm)
 S3method(term,lm)
 S3method(term,model_fit)
