--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,4 +1,4 @@
-Package: axe
+Package: asklepian
 Title: Formula Prescriptions
 Version: 0.0.0.9000
 Authors@R: 
@@ -32,7 +32,7 @@ Suggests:
     cli,
     knitr,
     rmarkdown
-URL: https://github.com/asshah4/axe
-BugReports: https://github.com/asshah4/axe/issues
+URL: https://github.com/asshah4/asklepian
+BugReports: https://github.com/asshah4/asklepian/issues
 Config/testthat/edition: 3
 VignetteBuilder: knitr
