cleaned up vec proxy, need tot think about shrinking name to just axe

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -41,17 +41,17 @@ S3method(vec_arith,term.default)
 S3method(vec_arith,term.term)
 S3method(vec_cast,character.rx)
 S3method(vec_cast,character.term)
-S3method(vec_cast,character.vctrs_list_of)
+S3method(vec_cast,formula_list.formula_list)
 S3method(vec_cast,rcrds_list_of.term)
 S3method(vec_cast,rx.rx)
 S3method(vec_cast,term.character)
 S3method(vec_cast,term.rcrds_list_of)
 S3method(vec_cast,term.rx)
 S3method(vec_cast,term.term)
-S3method(vec_cast,vctrs_list_of.character)
+S3method(vec_proxy,formula_list)
 S3method(vec_ptype2,character.rx)
 S3method(vec_ptype2,character.term)
-S3method(vec_ptype2,character.vctrs_list_of)
+S3method(vec_ptype2,formula_list.formula_list)
 S3method(vec_ptype2,rcrds_list_of.term)
 S3method(vec_ptype2,rx.character)
 S3method(vec_ptype2,rx.rx)
@@ -60,7 +60,6 @@ S3method(vec_ptype2,term.character)
 S3method(vec_ptype2,term.rcrds_list_of)
 S3method(vec_ptype2,term.rx)
 S3method(vec_ptype2,term.term)
-S3method(vec_ptype2,vctrs_list_of.character)
 S3method(vec_ptype_abbr,formula_list)
 S3method(vec_ptype_abbr,rx)
 S3method(vec_ptype_abbr,term)
@@ -82,9 +81,9 @@ export(rebuild)
 export(rhs)
 export(roles)
 export(rx)
-export(setGroups)
-export(setLabels)
-export(setRoles)
+export(set_groups)
+export(set_labels)
+export(set_roles)
 export(table_to_list)
 export(term)
 export(tx)
