--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -5,7 +5,7 @@ template:
     border-radius: 0.5rem
     btn-border-radius: 0.25rem
 
-url: https://asshah4.github.io/asklepian/
+url: https://asshah4.github.io/axe/
 
 destination: docs
 
@@ -28,7 +28,7 @@ navbar:
       href: reference/index.html
     github:
       icon: fab fa-github fa-lg
-      href: https://github.com/asshah4/asklepian/
+      href: https://github.com/asshah4/axe/
 
 articles:
 
