--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,21 +3,16 @@
 S3method(add,script)
 S3method(add,term_archetype)
 S3method(format,formula_archetype)
-S3method(format,formula_construct)
 S3method(format,model_archetype)
 S3method(format,script)
 S3method(format,term_archetype)
 S3method(formula,formula_archetype)
 S3method(formula,script)
 S3method(formula,term_archetype)
+S3method(formula_archetype,character)
 S3method(formula_archetype,default)
 S3method(formula_archetype,formula)
 S3method(formula_archetype,term_archetype)
-S3method(formula_construct,default)
-S3method(formula_construct,script)
-S3method(groups,list_of_formulas)
-S3method(groups,script)
-S3method(groups,term_archetype)
 S3method(labels,list_of_formulas)
 S3method(labels,script)
 S3method(labels,term_archetype)
@@ -30,7 +25,6 @@ S3method(model_archetype,list)
 S3method(model_archetype,lm)
 S3method(model_archetype,model_fit)
 S3method(obj_print_data,formula_archetype)
-S3method(obj_print_data,formula_construct)
 S3method(obj_print_data,model_archetype)
 S3method(obj_print_data,script)
 S3method(obj_print_data,term_archetype)
@@ -54,16 +48,16 @@ S3method(term_archetype,list_of_formulas)
 S3method(term_archetype,lm)
 S3method(term_archetype,model_fit)
 S3method(term_archetype,script)
+S3method(tiers,list_of_formulas)
+S3method(tiers,script)
+S3method(tiers,term_archetype)
 S3method(update,script)
 S3method(update,term_archetype)
-S3method(vec_arith,term_archetype.default)
-S3method(vec_arith,term_archetype.term_archetype)
 S3method(vec_cast,character.formula_archetype)
 S3method(vec_cast,character.script)
 S3method(vec_cast,character.term_archetype)
 S3method(vec_cast,formula_archetype.formula_archetype)
 S3method(vec_cast,formula_archetype.formula_script)
-S3method(vec_cast,formula_construct.formula_construct)
 S3method(vec_cast,model_archetype.model_archetype)
 S3method(vec_cast,rcrds_list_of.term_archetype)
 S3method(vec_cast,script.script)
@@ -79,7 +73,6 @@ S3method(vec_ptype2,formula_archetype.character)
 S3method(vec_ptype2,formula_archetype.formula_archetype)
 S3method(vec_ptype2,formula_archetype.formula_script)
 S3method(vec_ptype2,formula_archetype.term_archetype)
-S3method(vec_ptype2,formula_construct.formula_construct)
 S3method(vec_ptype2,formula_script.formula_archetype)
 S3method(vec_ptype2,model_archetype.model_archetype)
 S3method(vec_ptype2,rcrds_list_of.term_archetype)
@@ -92,22 +85,16 @@ S3method(vec_ptype2,term_archetype.rcrds_list_of)
 S3method(vec_ptype2,term_archetype.script)
 S3method(vec_ptype2,term_archetype.term_archetype)
 S3method(vec_ptype_abbr,formula_archetype)
-S3method(vec_ptype_abbr,formula_construct)
 S3method(vec_ptype_abbr,model_archetype)
 S3method(vec_ptype_abbr,script)
 S3method(vec_ptype_abbr,term_archetype)
 S3method(vec_ptype_full,formula_archetype)
-S3method(vec_ptype_full,formula_construct)
 S3method(vec_ptype_full,model_archetype)
 S3method(vec_ptype_full,script)
 S3method(vec_ptype_full,term_archetype)
 export(add)
-export(fm)
 export(fmls)
 export(formula_archetype)
-export(formula_construct)
-export(groups)
-export(has_cli)
 export(is_formula)
 export(is_script)
 export(is_term)
@@ -116,16 +103,15 @@ export(list_to_table)
 export(md)
 export(model_archetype)
 export(prescribe)
-export(rebuild)
 export(rhs)
 export(roles)
 export(rx)
-export(set_groups)
 export(set_labels)
 export(set_roles)
+export(set_tiers)
 export(table_to_list)
 export(term_archetype)
+export(tiers)
 export(tm)
-export(vec_arith.term_archetype)
 import(vctrs)
 importFrom(pillar,pillar_shaft)
