improving the rx construction

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -57,7 +57,7 @@ S3method(vec_cast,character.formula_archetype)
 S3method(vec_cast,character.script)
 S3method(vec_cast,character.term_archetype)
 S3method(vec_cast,formula_archetype.formula_archetype)
-S3method(vec_cast,formula_archetype.formula_script)
+S3method(vec_cast,formula_archetype.script)
 S3method(vec_cast,model_archetype.model_archetype)
 S3method(vec_cast,rcrds_list_of.term_archetype)
 S3method(vec_cast,script.script)
@@ -71,12 +71,12 @@ S3method(vec_ptype2,character.script)
 S3method(vec_ptype2,character.term_archetype)
 S3method(vec_ptype2,formula_archetype.character)
 S3method(vec_ptype2,formula_archetype.formula_archetype)
-S3method(vec_ptype2,formula_archetype.formula_script)
+S3method(vec_ptype2,formula_archetype.script)
 S3method(vec_ptype2,formula_archetype.term_archetype)
-S3method(vec_ptype2,formula_script.formula_archetype)
 S3method(vec_ptype2,model_archetype.model_archetype)
 S3method(vec_ptype2,rcrds_list_of.term_archetype)
 S3method(vec_ptype2,script.character)
+S3method(vec_ptype2,script.formula_archetype)
 S3method(vec_ptype2,script.script)
 S3method(vec_ptype2,script.term_archetype)
 S3method(vec_ptype2,term_archetype.character)
@@ -93,6 +93,7 @@ S3method(vec_ptype_full,model_archetype)
 S3method(vec_ptype_full,script)
 S3method(vec_ptype_full,term_archetype)
 export(add)
+export(construct_script)
 export(fmls)
 export(formula_archetype)
 export(is_formula)
