updated pattern expansion, fixed how formula LHS and RHS extractions occur, and placed vectors into lists

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ S3method(labels,list_of_formulas)
 S3method(labels,script)
 S3method(labels,term_archetype)
 S3method(lhs,formula)
+S3method(lhs,formula_archetype)
 S3method(lhs,script)
 S3method(lhs,term_archetype)
 S3method(model_archetype,default)
@@ -33,6 +34,7 @@ S3method(prescribe,default)
 S3method(prescribe,formula)
 S3method(prescribe,term_archetype)
 S3method(rhs,formula)
+S3method(rhs,formula_archetype)
 S3method(rhs,script)
 S3method(rhs,term_archetype)
 S3method(roles,list_of_formulas)
