checking formula complexity

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -42,7 +42,6 @@ S3method(term_archetype,default)
 S3method(term_archetype,formula)
 S3method(term_archetype,formula_archetype)
 S3method(term_archetype,glm)
-S3method(term_archetype,list_of_formulas)
 S3method(term_archetype,lm)
 S3method(term_archetype,model_fit)
 S3method(term_archetype,script)
@@ -91,6 +90,7 @@ S3method(vec_ptype_full,model_archetype)
 S3method(vec_ptype_full,script)
 S3method(vec_ptype_full,term_archetype)
 export(add)
+export(add_strata)
 export(construct_script)
 export(fmls)
 export(formula_archetype)
