major rehaul of formulas to provide orders

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,9 +26,6 @@ S3method(obj_print_data,model_archetype)
 S3method(obj_print_data,script)
 S3method(obj_print_data,term_archetype)
 S3method(pillar_shaft,model_archetype)
-S3method(prescribe,default)
-S3method(prescribe,formula)
-S3method(prescribe,term_archetype)
 S3method(rhs,formula)
 S3method(rhs,formula_archetype)
 S3method(rhs,script)
@@ -45,6 +42,7 @@ S3method(term_archetype,glm)
 S3method(term_archetype,lm)
 S3method(term_archetype,model_fit)
 S3method(term_archetype,script)
+S3method(term_archetype,term_archetype)
 S3method(tiers,list_of_formulas)
 S3method(tiers,script)
 S3method(tiers,term_archetype)
@@ -91,7 +89,7 @@ S3method(vec_ptype_full,script)
 S3method(vec_ptype_full,term_archetype)
 export(add)
 export(add_strata)
-export(construct_script)
+export(decipher)
 export(fmls)
 export(formula_archetype)
 export(is_formula)
