still not clear on the order for small formulas with mediation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -92,6 +92,7 @@ export(add_strata)
 export(decipher)
 export(fmls)
 export(formula_archetype)
+export(formula_to_named_list)
 export(is_formula)
 export(is_script)
 export(is_term)
@@ -99,6 +100,7 @@ export(lhs)
 export(list_to_table)
 export(md)
 export(model_archetype)
+export(named_list_to_formula)
 export(prescribe)
 export(rhs)
 export(roles)
