erroring on formulas and strata issues

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,7 +30,6 @@ S3method(rhs,formula)
 S3method(rhs,formula_archetype)
 S3method(rhs,script)
 S3method(rhs,term_archetype)
-S3method(roles,list_of_formulas)
 S3method(roles,script)
 S3method(roles,term_archetype)
 S3method(term_archetype,character)
@@ -92,6 +91,7 @@ export(decipher)
 export(fmls)
 export(formula_archetype)
 export(formula_to_named_list)
+export(get_terms)
 export(is_formula)
 export(is_script)
 export(is_term)
