added term list

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -81,10 +81,12 @@ S3method(vec_ptype_abbr,formula_archetype)
 S3method(vec_ptype_abbr,model_archetype)
 S3method(vec_ptype_abbr,script)
 S3method(vec_ptype_abbr,term_archetype)
+S3method(vec_ptype_abbr,term_list)
 S3method(vec_ptype_full,formula_archetype)
 S3method(vec_ptype_full,model_archetype)
 S3method(vec_ptype_full,script)
 S3method(vec_ptype_full,term_archetype)
+S3method(vec_ptype_full,term_list)
 export(add)
 export(add_strata)
 export(decipher)
@@ -109,6 +111,7 @@ export(set_roles)
 export(set_tiers)
 export(table_to_list)
 export(term_archetype)
+export(term_list)
 export(tiers)
 export(tm)
 import(vctrs)
